# HC32F460_template

./: .clang-format  .clangd  CMakeLists.txt  Engineering Framework.txt  HC32F460_template.code-workspace
.cache/clangd/index/: 24cxx.c.59051BCC2F151886.idx  24cxx.h.BDB4A01C8B769FEA.idx  BMP280.c.CDDA84DC33C9E8FB.idx  BMP280.h.CEEA3D0E80EDF84C.idx  FreeRTOS.h.410F7A7AC1B166E2.idx  FreeRTOSConfig.h.3FA88BE1E4D87176.idx  WIRE.c.4513B43604E6F45B.idx  WIRE.h.B10296474E455381.idx  app_manage.c.829C037CB813BC22.idx  app_manage.h.9C78CBCEA006EE51.idx  beat_task.c.14F2773A5FD4E3AD.idx  beat_task.h.677798D6C79D60E7.idx  bsp_can.cpp.E64AA9CCDE69F468.idx  bsp_can.h.888F9EE5D9673241.idx  bsp_cpu.c.8ED8D1EECF63382D.idx  bsp_cpu.h.4574C87CF8358DA7.idx  bsp_pwm.cpp.284A14B898ABDF7A.idx  bsp_pwm.h.EEF4D0D01E69372F.idx  bsp_uart.cpp.26B069F426A826BB.idx  bsp_uart.h.08CE7B42E5C944DB.idx  button.c.97287144F9552769.idx  button.h.819637F225BBF775.idx  cmsis_compiler.h.0265D4A3677519B9.idx  cmsis_gcc.h.CCD98D84A09EC768.idx  cmsis_version.h.BD51B0ED1B940F7C.idx  core_cm4.h.776946A5A78737D5.idx  croutine.c.71A5CB2E559525AB.idx  croutine.h.A42A1BE3B47016CE.idx  deprecated_definitions.h.DC6250117947F2C7.idx  drv_hal.cpp.6CE43F0ECA376EFE.idx  drv_hal.h.8FD7F82E101698E2.idx  ev_hc32f460_lqfp100_v2.c.73FD770083F5ED9D.idx  ev_hc32f460_lqfp100_v2.h.0CA8DB5C2128E6E8.idx  ev_hc32f460_lqfp100_v2_24cxx.c.349BB46D2C4967E1.idx  ev_hc32f460_lqfp100_v2_24cxx.h.D1FB622199C51DE5.idx  ev_hc32f460_lqfp100_v2_bsp.h.43B8590DA8D25146.idx  ev_hc32f460_lqfp100_v2_w25qxx.c.073BB995E3F0A171.idx  ev_hc32f460_lqfp100_v2_w25qxx.h.2E400376FA7BA4CE.idx  ev_hc32f460_lqfp100_v2_wm8731.c.0FB231A72EF0E26B.idx  ev_hc32f460_lqfp100_v2_wm8731.h.57061B155EEFC90D.idx  (+136 more)
.eide/: eide.json
application/: CMakeLists.txt  baseTask.hpp  taskFactory.cpp  taskFactory.hpp
application/can/: canTask.cpp  canTask.hpp
application/led/: ledTask.cpp  ledTask.hpp
application/motor/: motorTask.cpp  motorTask.hpp
application/uart/: uartTask.cpp  uartTask.hpp
bsp/: CMakeLists.txt
bsp/components/malloc/: malloc.c  malloc.h  memory_management.cpp
bsp/ev_hc32f460_lqfp100_v2/: ev_hc32f460_lqfp100_v2.c  ev_hc32f460_lqfp100_v2.h
bsp/peripherals/can/: bspCan.c  bspCan.h
bsp/peripherals/cpu_utilization/: cpuUtilization.c  cpuUtilization.h
bsp/peripherals/eirq/: bspEirq.c  bspEirq.h
bsp/peripherals/gpio/: bspGpio.c  bspGpio.h
bsp/peripherals/led/: bspLed.cpp  bspLed.hpp
bsp/peripherals/pwm/: bspPwm.cpp  bspPwm.hpp
bsp/peripherals/uart/: bspUart4.c  bspUart4.h  printfUart.c  printfUart.h
cmake/: gcc-arm-none-eabi.cmake
configs/: CMakeLists.txt  globalConfig.c  globalConfig.h
core/: CMakeLists.txt
core/system/: systemCalls.c
drivers/: CMakeLists.txt
drivers/app/: taskManage.cpp  taskManage.h
drivers/bsp/can/: bsp_can.cpp  bsp_can.h
drivers/bsp/components/malloc/: malloc.c  malloc.h  memory_management.cpp
drivers/bsp/cpu_utilization/: bsp_cpu.c  bsp_cpu.h
drivers/bsp/ev_hc32f460_lqfp100_v2/: ev_hc32f460_lqfp100_v2.c
drivers/bsp/led/: bsp_led.cpp  bsp_led.h
drivers/bsp/pwm/: bsp_pwm.cpp  bsp_pwm.h
drivers/bsp/usart/: bsp_uart.cpp  bsp_uart.h  bsp_usart.c  bsp_usart.h  printf_usart.c  printf_usart.h
drivers/cmsis/Device/HDSC/hc32f4xx/Source/GCC/: startup_hc32f460.S
drivers/drv/: drv_hal.cpp  drv_hal.h
drivers/hal/: hal.cpp  hal.h
drivers/hardware/: systemInit.cpp  systemInit.hpp
drivers/hardware/can/: drvCan.cpp  drvCan.hpp
drivers/hardware/led/: drvLed.cpp  drvLed.hpp
drivers/hardware/motor/: drvMotor.cpp  drvMotor.hpp
drivers/hardware/uart/: drvUart.cpp  drvUart.hpp
drivers/hc32_ll_driver/inc/: hc32_ll_adc.h  hc32_ll_tmr6.h  hc32_ll_tmra.h  hc32_ll_usb.h  hc32_ll_utility.h
drivers/hc32_ll_driver/src/: hc32_ll_adc.c  hc32_ll_can.c  hc32_ll_i2c.c  hc32_ll_tmr6.c  hc32_ll_tmra.c  hc32_ll_usb.c  hc32_ll_utility.c
hal/: CMakeLists.txt  drvHal.cpp  drvHal.hpp  drv_hal.cpp  drv_hal.hpp  hal.cpp  hal.hpp
include/: CMakeLists.txt  main.h  variable.h
libraries/: CMakeLists.txt
libraries/qf_lib/inc/: appManage.h  beatTask.h  bmp280.h  button.h  keyValueMap.hpp  keyValueTransation.h  ringBuffer.h  wire.h
libraries/qf_lib/src/: appManage.c  beatTask.c  button.c  keyValueMap.cpp  keyValueTransation.c  ringBuffer.c  wire.c
middlewares/: CMakeLists.txt
middlewares/freeRTOS/include/: FreeRTOSConfig.h  atomic.h
middlewares/qf_lib/inc/: BMP280.h  WIRE.h  app_manage.h  beat_task.h  button.h  key_value_transation.h  ring_buffer.h
middlewares/qf_lib/src/: BMP280.c  WIRE.c  app_manage.c  beat_task.c  key_value_transation.c  ring_buffer.c
scripts/jlink/: reset.jlink
source/: CMakeLists.txt  main.c  main.cpp  syscalls.c  variable.c
source/task/: taskManage.cpp  taskManage.hpp
tools/jlink/: download.jlink  erase.jlink
